# BeaconMCP

./: README.md  beaconmcp.yaml.example  pyproject.toml
.github/workflows/: ci.yml
docs/: cloudflare.md  troubleshooting.md
src/beaconmcp/: __main__.py  audit.py  auth.py  config.py  server.py  wizard.py
src/beaconmcp/bmc/: redfish.py
src/beaconmcp/dashboard/: app.py
src/beaconmcp/dashboard/templates/: tokens.html
src/beaconmcp/proxmox/: client.py  system.py  vms.py
src/beaconmcp/ssh/: client.py
tests/: test_audit.py  test_audit_log_wiring.py  test_bmc_registry.py  test_cloudflare_diagnostic.py  test_config_yaml.py  test_dashboard_chat.py  test_integration.py  test_proxmox_client.py  test_proxmox_helpers.py  test_snapshots.py  test_token_persistence.py  test_token_store.py  test_totp_replay.py  test_utils.py  test_wizard.py
