[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "beaconmcp"
version = "2.0.0"
description = "Remote MCP server for Proxmox VE and BMC (iLO/IPMI) infrastructure management"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0",
    "proxmoxer",
    "requests",
    "python-hpilo",
    "asyncssh",
    "python-dotenv",
    "pyyaml",
    "pyotp",
    "qrcode",
    "cryptography>=42",
    "jinja2>=3",
    "google-genai>=1.0",
    "httpx>=0.27",
    "anyio",
]

[project.optional-dependencies]
# Interactive TUI config wizard (`beaconmcp init`). Kept optional so slim
# server deployments don't pull the textual stack just to run the daemon.
wizard = ["textual>=0.85"]
# Test + lint toolchain.
dev = ["pytest", "pytest-asyncio", "ruff"]

[project.scripts]
beaconmcp = "beaconmcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/beaconmcp"]

[tool.hatch.build.targets.wheel.force-include]
"src/beaconmcp/assets/logo.webp" = "beaconmcp/assets/logo.webp"
"src/beaconmcp/dashboard/templates" = "beaconmcp/dashboard/templates"
"src/beaconmcp/dashboard/static" = "beaconmcp/dashboard/static"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
# Conservative: stay on ruff's default pyflakes (F) + pycodestyle errors (E).
# E501 (line-too-long) is intentionally ignored: the existing tree has many
# long lines and enabling it would force a large, unrelated reformat that is
# out of scope for this change.
select = ["E", "F"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
